[package]
name = "pagong"
description = "A static site generator for slow connections"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["expectocode <expectocode@gmail.com>", "Lonami Exo <totufals@hotmail.com>"]
repository = "https://github.com/expectocode/pagong.git"
homepage = "https://github.com/expectocode/pagong"
edition = "2018"
readme = "README.md"

[dependencies]
atom_syndication = { version = "0.10", default-features = false }
chrono = "0.4"
pulldown-cmark = "0.8"
anyhow = "1.0"
