[package]
name = "pagong"
description = "A static site generator for slow connections"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Lonami Exo <totufals@hotmail.com>", "expectocode <expectocode@gmail.com>"]
repository = "https://github.com/expectocode/pagong.git"
homepage = "https://github.com/expectocode/pagong"
edition = "2018"
readme = "README.md"

[dependencies]
atom_syndication = { version = "0.10", default-features = false }
quick-xml = "0.22"  # should match that of atom_syndication
chrono = "0.4"
pulldown-cmark = { version = "0.8", default-features = false }
clap = { version = "2", default-features = false }
hyperbuild = "0.2.4"  # whitespace removal is necessary for some tags such as <li>
